--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -1,4 +1,4 @@
-FROM supermy/rabbitmq_base:3.5
+FROM supermy/docker-rabbitmq_base:3.5
 
 RUN rabbitmq-plugins enable --offline rabbitmq_management
 
